--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,12 @@ h1 {
 
 .discription {
   display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   justify-content: center;
-  margin-right: 16%;
+  align-content: center;
   gap: 100px;
-  height: 200px;
+  flex-wrap: wrap;
 }
 
 .foto {
@@ -29,13 +31,31 @@ p {
 }
 
 .achievements {
-  margin-left: 36%;
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  /*width: 200px;*/
+  margin-top: 8%;
+}
+.item{
+  display: grid;
+  border-radius: 15px;
+  justify-content: space-evenly;
+  /*overflow: hidden;*/
+  background-color: rgb(255, 255, 255);
+  width: 400px;
+}
+
+.item-content {
+  align-content: center;
 }
 
 .details {
-  margin-left: 36%;
-  margin-top: 2%;
+  display: flex;
+  justify-content: center;
 }
 
 .links {
@@ -46,4 +66,8 @@ p {
 }
 .li:hover {
   transform: scale(1.3)
+}
+.ComicButton {
+  display: flex;
+  justify-content: center;
 }
